# Magic-Worksheet-Crafter

./: .gitignore  CLAUDE.md  Example.md  README.md  pyproject.toml  setup.toml
.claude/: settings.json
.claude/skills/worksheet-creator/: SKILL.md
.claude/skills/worksheet-creator/references/: info-text-example.md  reference-example.md  single-choice-example.md  table-task-example.md  text-task-example.md
.claude/skills/worksheet-frontmatter/: SKILL.md
build_app/: app_entry.py  magic_worksheet_crafter.icns  setup.py
src/magic_worksheet_crafter/: __init__.py  config.py  main.py
src/magic_worksheet_crafter/builder/: document_builder.py
src/magic_worksheet_crafter/builder/modules/: header_footer.py  information_text.py  reference_list.py  single_choice.py  source_text.py  study_header.py  table_task.py  task_exercise.py  text_task.py
src/magic_worksheet_crafter/builder/modules/shared/: markdown_formatter.py  segment.py  segment_header.py  table_column_width.py
src/magic_worksheet_crafter/gui/: __init__.py  app.py  components.py  tabs.py
src/magic_worksheet_crafter/parser/: markdown_parser.py
src/magic_worksheet_crafter/parser/modules/: frontmatter_parser.py  info_text_parser.py  reference_list_parser.py  single_choice_parser.py  source_text_parser.py  table_task_parser.py  text_task_parser.py
src/magic_worksheet_crafter/parser/modules/shared/: table_structure_parser.py
src/magic_worksheet_crafter/parser/shared/: segment_type.py
